# vemigrate

./: Cargo.toml  LICENSE  LICENSE-APACHE  README.md
vemigrate/: Cargo.toml  README.md
vemigrate-cli/: Cargo.toml  README.md
vemigrate-cli/src/: cli.rs  config.rs  configs.rs  database.rs  error.rs  main.rs
vemigrate-cli/src/store/: mod.rs  scylla_store.rs
vemigrate/src/: lib.rs
