[package]
name = "vemigrate-cli"
version = "0.2.0"
authors = ["Vuraddo <vuraddo@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
clap = "2.33.0"
cdrs = "2.1.0"
cdrs_helpers_derive = "0.3.0"

[dependencies.vemigrate]
path = "../vemigrate"
