[package]
name = "vemigrate-cli"
version = "0.3.0"
authors = ["Arekkusuva <vuraddo@yahoo.com>"]
edition = "2018"

description = "Migration CLI for Cassandra and SkyllaDB"
repository = "https://github.com/rstrait/vemigrate"
readme = "README.md"
categories = ["database"]
keywords = ["migration", "cql", "cli", "cassandra", "cassandradb", "scylla", "scylladb"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
clap = "2.33.0"
cdrs = "2.1.0"
cdrs_helpers_derive = "0.3.0"
structopt = "0.3"

[dependencies.vemigrate]
version = "0.3"
path = "../vemigrate"
