[package]
name = "vemigrate"
description = "Provides tools for migration CLI"
version = "0.1.0"
keywords = ["migration", "cql"]
categories = ["database"]
authors = ["Arekkusuva <vuraddo@yahoo.com>"]
repository = "https://github.com/rstrait/vemigrate"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
