[package]
name = "vemigrate"
version = "0.3.0"
authors = ["Arekkusuva <vuraddo@yahoo.com>"]
edition = "2018"

description = "Provides tools for migration CLI"
documentation = "https://docs.rs/vemigrate"
homepage = "https://github.com/rstrait/vemigrate"
repository = "https://github.com/rstrait/vemigrate"
readme = "README.md"
categories = ["database"]
keywords = ["migration", "cql"]
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
